# ansible-role

./: .ansible-lint  .gitignore  .travis.yml  CHANGELOG.rst  README.md  galaxy.yml  justfile  pyproject.toml  requirements.yml
.github/workflows/: ci.yaml  ci.yml  release.yml  test.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  create.yml  destroy.yml  molecule.yml  prepare.yml  side_effect.yml  verify.yml
roles/setup/defaults/: main.yml
roles/setup/meta/: main.yml
roles/setup/tasks/: arch.yml  debian.yml  dotfiles.yml  git.yml  keys.yml  locale.yml  main.yml
roles/setup/vars/: main.yml
tasks/: arch.yml  debian.yml  dotfiles.yml  git.yml  keys.yml  locale.yml  main.yml
test/: pyproject.toml
test/molecule/default/: converge.yml  molecule.yml  verify.yml
tests/: test.yml
vars/: main.yml
