[project]
name = "parham-alvani-dotfiles-testing"
version = "0.1.0"
description = "Testing dependencies for parham_alvani.dotfiles ansible collection"
requires-python = ">=3.13"
dependencies = [
  "molecule>=25.7.0",
  "molecule-plugins[docker]>=25.8.12",
  "docker>=7.1.0",
  "ansible-core>=2.19.3",
]
